Page MenuHome GnuPG

no possibility to configure gpg-agent to set a pinentry timeout
Closed, ResolvedPublic

Description

pinentry supports --timeout (and a SETTIMEOUT command) but there is no way to
tell gpg-agent to set the timeout. Setting pinentry-program does not help,
because it is not possible to add command line arguments.

A workaround is to create a wrapper script that passes --timeout to pinentry.

Event Timeline

werner claimed this task.

[11:26:04] <gitbot> [git] GnuPG - branch master updated by Werner Koch:
4997433 agent: New option --pinentry-timeout